<?xml version="1.0" encoding="utf-8"?>

<androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	style="@style/GridLayout"
	app:columnCount="1"
	app:rowCount="5">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/app_name"
		android:textAppearance="@style/title"
		android:textStyle="bold"
		app:layout_rowWeight="1" />

	<com.example.edumatch.views.LabelAndEditTextView
		android:id="@+id/username"
		app:hintText="@string/username_hint"
		app:labelText="@string/username_label"
		app:layout_gravity="center_horizontal" />

	<com.example.edumatch.views.LabelAndEditTextView
		android:id="@+id/password"
		app:hintText="@string/password_hint"
		app:inputType="textPassword"
		app:labelText="@string/password_label"
		app:layout_gravity="center_horizontal" />

	<androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		app:columnCount="2"
		app:rowCount="1">

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/signup_button"
			style="@style/WhiteButton"
			android:layout_marginRight="8dp"
			android:text="@string/signup_button_label"
			app:layout_columnWeight="1" />

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/signin_button"
			style="@style/BlackButton"
			android:text="@string/signin_button_label"
			app:layout_columnWeight="1" />
	</androidx.gridlayout.widget.GridLayout>

 <com.example.edumatch.views.GoogleIconButtonView
	 android:id="@+id/google"
	 app:buttonText = "@string/google_sign_in_text"
	 app:layout_gravity="center"
	 android:layout_marginTop="36dp"
	 />

</androidx.gridlayout.widget.GridLayout>