

<androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="16dp"
android:layout_marginRight="12dp"
app:columnCount="1"
app:rowCount="2">

<TextView
	android:id="@+id/label"
	android:layout_width="match_parent"
	android:layout_height="20dp"
	android:layout_alignParentLeft="true"
	android:layout_marginTop="0dp"
	android:lineSpacingExtra="4sp"
	android:textAppearance="@style/label_text"
	app:layout_rowWeight="1" />

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="36dp"
	android:layout_alignParentTop="true"
	android:layout_marginTop="8dp"
	android:background="@drawable/input_container"
	app:layout_rowWeight="1">

	<EditText
		android:id="@+id/edit_text"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginLeft="12dp"
		android:layout_marginRight="12dp"
		android:background="@android:color/transparent"
		android:gravity="center_vertical"
		android:lineSpacingExtra="4sp"
		android:textAppearance="@style/label_text"
		android:fontFamily="sans-serif"
		android:translationY="-1.8sp" />
</RelativeLayout>
</androidx.gridlayout.widget.GridLayout>