<?xml version="1.0" encoding="utf-8"?><!--<LinearLayout-->
<androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="center_horizontal"
	app:columnCount="1"
	app:rowCount="2">
<!--<ImageView-->
<!--	android:id="@+id/emptyBar"-->
<!--	android:layout_width="match_parent"-->
<!--	android:layout_height="40dp"-->
<!--	android:background="@drawable/empty_bar"/>-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/scrollView"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_weight="1"
	android:fillViewport="true"
	android:nestedScrollingEnabled="false"
	android:paddingBottom="30dp">

	<LinearLayout
		android:id="@+id/messageContainer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:orientation="vertical">
	</LinearLayout>
</ScrollView>
</androidx.gridlayout.widget.GridLayout>